--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@
   margin-bottom: 100px;
   width: 80%;
 }
+.customModalImport {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 45%;
+}
 
 .input-group-date {
   position: relative;
