--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,67 @@
   width: 100%;
 }
 
+.select-control {
+  width: 100%;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.css-1s2u09g-control {
+-webkit-align-items: center;
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+background-color: hsl(0, 0%, 100%);
+border-color: hsl(0, 0%, 80%);
+border-top-right-radius: 0 !important;
+border-bottom-right-radius: 0 !important;
+border-top-left-radius: 4px !important;
+border-bottom-left-radius: 4px !important;
+border-style: solid;
+border-width: 1px;
+cursor: default;
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-flex-wrap: wrap;
+-webkit-flex-wrap: wrap;
+-ms-flex-wrap: wrap;
+flex-wrap: wrap;
+-webkit-box-pack: justify;
+-webkit-justify-content: space-between;
+justify-content: space-between;
+min-height: 38px;
+outline: 0!important;
+position: relative;
+-webkit-transition: all 100ms;
+transition: all 100ms;
+box-sizing: border-box;
+}
+
+.input-group-text {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
