--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,32 @@
   text-transform: capitalize;
 }
 
+.wadahkondisi {
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  background-color: #fff;
+  border-left: 5px solid #e9ecef;
+  margin-bottom: 1rem;
+  padding: 1px;
+}
+
+.wadahkondisi.danger {
+  border-left-color: #bd2130;
+}
+
+.wadahkondisi.info {
+  border-left-color: #117a8b;
+}
+
+.wadahkondisi.warning {
+  border-left-color: #d39e00;
+}
+
+.wadahkondisi.success {
+  border-left-color: #1e7e34;
+}
+
+
 .css-1s2u09g-control {
 -webkit-align-items: center;
 -webkit-box-align: center;
