--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,22 @@
   border-left-color: #1e7e34;
 }
 
+.form-control-nilai {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 4px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  box-shadow: inset 0 0 0 transparent;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
 
 .css-1s2u09g-control {
 -webkit-align-items: center;
